# Mnkt-Renderer

./: README.md
imageGenerator/: CMakeLists.txt  readme.md
imageGenerator/src/: main.c
mnktRenderer/: CMakeLists.txt  makefile
mnktRenderer/src/: framebuffer.c  framebuffer.h  image.h  mnktRenderer.c  mnktRenderer.h  rasterizer.c  rasterizer.h  shader.h  vec.c  vec.h
mnktRenderer/src/math/: mathUtils.c  mathUtils.h  vec.c  vec.h
mnktRenderer/src/utility/: colorUtils.c  colorUtils.h
